Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp
@@ -192,6 +192,8 @@ void LibWebRTCPeerConnectionBackend::doStop()
 
     m_endpoint->stop();
 
+    m_audioSources.clear();
+    m_videoSources.clear();
     m_statsPromises.clear();
     m_remoteStreams.clear();
     m_pendingReceivers.clear();
